Forward mouse events to the omnibox.

This allows the user to interact with the omnibox with mouse
events while the results pane is showing.

BUG=836829

Change-Id: Iec6eee4bf55ca82efdfdb5654f2fee86bd5975f5
Reviewed-on: https://chromium-review.googlesource.com/1128198
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573318}
Former-commit-id: ea805a9f49eeaa551cee6bf654bb4cefde1a89d3